--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #201751 !default;
-$header-bg-color-secondary: #FBAD18 !default;
+$header-bg-color: #DAD9D7 !default;
+$header-bg-color-secondary: #201751 !default;
 
 // Text
 $section-headings-color: #159957 !default;
