--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,7 +4,7 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #DAD9D7 !default;
+$header-bg-color: #1f9454 !default;
 $header-bg-color-secondary: #201751 !default;
 
 // Text
