--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -124,6 +124,13 @@ a {
   }
 }
 
+.header-image {
+  background-image: url(“/assets/images/logo-esr-vipu-ely-seamk.PNG”);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  position: relative;
+  background-size: cover;
+  }
 .project-name {
   margin-top: 0;
   margin-bottom: 0.1rem;
