--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -125,7 +125,7 @@ a {
 }
 
 .header-image {
-  background-image: url(“/assets/images/logo-esr-vipu-ely-seamk.PNG”);
+  background-image: url(“../assets/images/logo-esr-vipu-ely-seamk.PNG”);
   background-position: bottom;
   background-repeat: no-repeat;
   position: relative;
