--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -110,6 +110,7 @@ a {
   text-align: center;
   background-color: $header-bg-color;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-image: url('/assets/images/logo-esr-vipu-ely-seamk.PNG');
 
   @include large {
     padding: 4rem 5rem;
@@ -125,7 +126,7 @@ a {
 }
 
 .header-image {
-  background-image: url(“../assets/images/logo-esr-vipu-ely-seamk.PNG”);
+  background-image: url(“assets/images/logo-esr-vipu-ely-seamk.PNG”);
   background-position: bottom;
   background-repeat: no-repeat;
   position: relative;
