--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -124,6 +124,13 @@ a {
   }
 }
 
+.header-image {
+  background-image: url('/assets/images/logo-esr-vipu-ely-seamk1.PNG');
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  background-size: cover;
+  }
 
 .project-name {
   margin-top: 0;
