--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,9 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
-      <a class="header-image">Header image</a>
+      <img src="/assets/images/logo-esr-vipu-ely-seamk1.PNG" alt="Rahoittajien logot">
     </header>
-    <div class= “header-image”>
-    </div>
+    
 
     <main id="content" class="main-content" role="main">
       {{ content }}
