--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
     <style>
       img {
         border-radius: 50%;
+        position: absolute;
+        right: 100px;
+        top: 50px;
       }
       </style>
   </head>
