--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,9 +9,9 @@ $header-bg-color-secondary: #201751 !default;
 
 // Text
 $section-headings-color: #159957 !default;
-$body-text-color: #8686a7 !default;
+$body-text-color: #404046 !default;
 $body-link-color: #1e6bb8 !default;
-$blockquote-text-color: #819198 !default;
+$blockquote-text-color: #404046 !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
